Agregacion de la animacion a la imagen de niño negrito

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <img style="width: 230px; margin-top:20px; box-shadow: 2px 1px 30px rgb(0, 0, 0); border-radius: 50%;" src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/54801/man-emoji-clipart-xl.png" alt="img">
+                        <img style="width: 230px; margin-top:20px; box-shadow: 2px 1px 30px rgb(0, 0, 0); border-radius: 50%;" src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/54801/man-emoji-clipart-xl.png" class="animated-image" alt="img">
                     </div>
                 </div>
     
