--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="row">
                     <div style="margin-top: 15px;" class="col">
                         <h1 class="titulo"> Cordial saludo <br>Cristian Rodriguez </h1>
-                        <p style="font-size: 27px; font-family: Georgia, 'Times New Roman', Times, serif; margin-top:30px;text-shadow:2px 1px 20px black;font-weight:bold"> Desarrollador web full stack</p>
+                        <p style="font-size: 27px; font-family: Georgia, 'Times New Roman', Times, serif; margin-top:30px;text-shadow:2px 1px 20px black;font-weight:bold"> Desarrollador web <br>Full-Stack</p>
                     </div>
                 </div>
     
