--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div class="col-sm-4 col__header">
                 <i class="bi bi-globe2 icons__header"></i>
                 <h3 class="titulo__header"> Desarrollo web </h3>
-                <p class="texto__header"> En el campo del desarrollo web, he trabajado en diversos proyectos utilizando tecnologías como Django, HTML, CSS y JavaScript. Aunque mi experiencia laboral es limitada, he creado aplicaciones web dinámicas y atractivas utilizando Django como framework principal. Además, he diseñado páginas web modernas y responsivas con HTML y CSS, y he agregado interactividad con JavaScript. Estoy emocionado por seguir creciendo en este campo y enfrentar nuevos desafíos en el desarrollo web.</p>
+                <p class="texto__header"> En el campo del desarrollo web, he trabajado en diversos proyectos utilizando tecnologías como Django y React. Aunque mi experiencia laboral es limitada, he creado aplicaciones web dinámicas y atractivas utilizando Django como framework de backend y Reactor como framework de frontend. Además, he diseñado páginas web modernas y responsivas e interactivas utilizando las tecnologías ya mencionadas. Estoy emocionado por seguir creciendo en este campo y enfrentar nuevos desafíos en el desarrollo web.</p>
               </div>
     
               <div class="col-sm-4 col__header">
