Agregando la direccion de impact x

--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
       <div class="row">
 
         <div class="col-sm-3">
-          <a href="https://newswave-6ngo.onrender.com" target="_blank"> <img class="img-project"
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/BBC_World_News_2019.svg/200px-BBC_World_News_2019.svg.png"
+          <a href="https://critianrodriguez042502.github.io/agency_view/" target="_blank"> <img class="img-project"
+              src="https://img.freepik.com/psd-premium/icono-lista-tareas-bloc-notas-lista-tareas-completada-renderizado-3d-lapiz-psd-premium_471402-258.jpg?w=2000"
               alt="img"></a>
         </div>
 
         <div class="col-sm-3">
-          <a href="https://taskhub-69ea.onrender.com" target="_blank"> <img class="img-project"
-              src="https://img.freepik.com/psd-premium/icono-lista-tareas-bloc-notas-lista-tareas-completada-renderizado-3d-lapiz-psd-premium_471402-258.jpg?w=2000"
+          <a href="https://newswave-6ngo.onrender.com" target="_blank"> <img class="img-project"
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/BBC_World_News_2019.svg/200px-BBC_World_News_2019.svg.png"
               alt="img"></a>
         </div>
 
