--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <title>Cristian Rodriguez | Official Website</title>
   </head>
-  <body>
+  <body style="scroll-behavior: smooth;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
