--- a/index.html
+++ b/index.html
@@ -1,48 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta
-      name="description"
-      content="Portafolio web de Cristian Rodriguez, desarrollador con gran experiencia y buen manejo en las tecnologias de punta."
-    />
-    <meta name="keywords" content="Cristian Rodriguez | Official Website" />
-    <meta name="copyrigth" content="Cristian Rodriguez" />
-    <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="#333" />
+        <meta
+            name="description"
+            content="Portafolio web de Cristian Rodriguez, desarrollador con gran experiencia y buen manejo en las tecnologias de punta."
+        />
+        <meta name="keywords" content="Cristian Rodriguez | Official Website" />
+        <meta name="copyrigth" content="Cristian Rodriguez" />
+        <meta name="robots" content="index, follow" />
+        <meta name="theme-color" content="#333" />
 
-    <meta property="og:title" content="Cristian Rodriguez | Official Website" />
-    <meta
-      property="og:description"
-      content="Portafolio web de Cristian Rodriguez, desarrollador con gran experiencia y buen manejo en las tecnologias de punta."
-    />
-    <meta
-      property="og:image"
-      content="./src/assents/favicon/favicon-portfolio.png"
-    />
-    <meta property="og:image:alt" content="Un icono de un portafolio web" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
-    <meta property="og:type" content="image.png" />
-    <meta
-      property="og:url"
-      content="./src/assents/favicon/favicon-portfolio.png"
-    />
+        <meta property="og:title" content="Cristian Rodriguez | Official Website" />
+        <meta
+            property="og:description"
+            content="Portafolio web de Cristian Rodriguez, desarrollador con gran experiencia y buen manejo en las tecnologias de punta."
+        />
+        <meta property="og:image" content="./src/assents/favicon/favicon-portfolio.png" />
+        <meta property="og:image:alt" content="Un icono de un portafolio web" />
+        <meta property="og:image:width" content="400" />
+        <meta property="og:image:height" content="300" />
+        <meta property="og:type" content="image.png" />
+        <meta property="og:url" content="./src/assents/favicon/favicon-portfolio.png" />
 
-    <meta property="og:locale:alternate" content="es_ES" />
-    <meta
-      property="og:site_name"
-      content="Cristian Rodriguez | Official Website"
-    />
+        <meta property="og:locale:alternate" content="es_ES" />
+        <meta property="og:site_name" content="Cristian Rodriguez | Official Website" />
 
-    <link rel="icon" href="./src/assents/favicon/favicon-portfolio.png" />
+        <link rel="icon" href="./src/assents/favicon/favicon-portfolio.png" />
 
-    <title>Cristian Rodriguez | Official Website</title>
-  </head>
-  <body style="scroll-behavior: smooth;">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+        <title>Cristian Rodriguez | Official Website</title>
+    </head>
+    <body style="scroll-behavior: smooth">
+        <div id="root"></div>
+        <script type="module" src="/src/App.jsx"></script>
+    </body>
 </html>
