--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             property="og:description"
             content="Portafolio web de Cristian Rodriguez, desarrollador con gran experiencia y buen manejo en las tecnologias de punta."
         />
-        <meta property="og:image" content="./src/assents/favicon/favicon-portfolio.png" />
+        <meta property="og:image" content="https://i.ibb.co/gSp4Hwk/favicon-portfolio.png" />
         <meta property="og:image:alt" content="Un icono de un portafolio web" />
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="300" />
         <meta property="og:type" content="image.png" />
-        <meta property="og:url" content="./src/assents/favicon/favicon-portfolio.png" />
+        <meta property="og:url" content="https://i.ibb.co/gSp4Hwk/favicon-portfolio.png" />
 
         <meta property="og:locale:alternate" content="es_ES" />
         <meta property="og:site_name" content="Cristian Rodriguez | Official Website" />
 
-        <link rel="icon" href="./src/assents/favicon/favicon-portfolio.png" />
+        <link rel="icon" href="https://i.ibb.co/gSp4Hwk/favicon-portfolio.png" />
 
         <title>Cristian Rodriguez | Official Website</title>
     </head>
