--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     </head>
     <body style="scroll-behavior: smooth">
         <div id="root"></div>
-        <script type="module" src="/src/App.jsx"></script>
+        <script type="module" src="./src/app.jsx"></script>
     </body>
 </html>
